--- a/PWA/index.html
+++ b/PWA/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <!--<link rel="manifest" href="manifest.webmanifest"-->
+    <link rel="manifest" href="manifest.webmanifest">
     <meta charset="UTF-8">
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="mobile-web-app-capable" />
